# osdesign

./: .gitignore  CMakeLists.txt  LICENSE  README.md  format.sh  main.cc  mainwindow.cc  mainwindow.hh
.github/workflows/: cmake.yml
copier/: CMakeLists.txt  copier.c  main.c
include/copier/: copier.h
include/qmonitor/: authorinfo.hh  basic.hh  cpu.hh  mainwindow.hh  memory.hh  process.hh  system.hh  utils.hpp
include/qtviewer/: bufferwindow.hh  destwindow.hh  imagewindow.hh  mainwindow.hh  sourcewindow.hh  timewindow.hh
script/: format.sh
src/copier/: CMakeLists.txt  copier.c  main.c
src/qmonitor/: CMakeLists.txt  authorinfo.cc  authorinfo.html  cpu.cc  main.cc  mainwindow.cc  memory.cc  process.cc  resources.h.in  system.cc
src/qtviewer/: CMakeLists.txt  bufferwindow.cc  destwindow.cc  imagewindow.cc  main.cc  mainwindow.cc  sourcewindow.cc  timewindow.cc
src/syscall/: process.md  sys.c  syscall_64.tbl  syscalls.h  test_copy_file.c  test_hello_world.c
src/tcdev/: README.md  run.sh  tekky_chrdev.c  test_device.c
test/: CMakeLists.txt
test/unittest/copier/: copier_test.cc
